[gd_scene load_steps=5 format=2]

[ext_resource path="res://mocraAdventure/level_selector/level_template.gd" type="Script" id=1]
[ext_resource path="res://mocraAdventure/level_selector/levels_textures/background.png" type="Texture2D" id=2]
[ext_resource path="res://mocraAdventure/level_selector/levels_textures/default_empty.png" type="Texture2D" id=3]
[ext_resource path="res://fonts/ubuntu17.tres" type="FontFile" id=5]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1720.0
offset_bottom = -830.0
custom_minimum_size = Vector2( 200, 250 )
script = ExtResource( 1 )
__meta__ = {
"_edit_horizontal_guides_": [ 20.0, 45.0 ],
"_edit_vertical_guides_": [ 100.0, 75.0, 125.0 ]
}

[node name="Background" type="TextureRect" parent="."]
offset_right = 200.0
offset_bottom = 250.0
custom_minimum_size = Vector2( 200, 250 )
texture = ExtResource( 2 )

[node name="DescriptionLabel" type="RichTextLabel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -80.0
offset_top = 37.0
offset_right = 80.0
offset_bottom = 97.0
custom_fonts/normal_font = ExtResource( 5 )
text = "GIAUQHGBOUQGVFO_YIsdsdsdsdsdsdsdsghbzqfizagqvcuyk"
scroll_active = false

[node name="DifficultyLabel" type="Label" parent="."]
offset_left = 84.0
offset_top = 139.0
offset_right = 116.0
offset_bottom = 156.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = ExtResource( 5 )
text = "hard"

[node name="LevelLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -4.0
offset_top = -8.5
offset_right = 4.0
offset_bottom = 8.5
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = ExtResource( 5 )
text = "1"

[node name="star1Texture" type="TextureRect" parent="."]
offset_left = 25.0
offset_top = 45.0
offset_right = 125.0
offset_bottom = 145.0
scale = Vector2( 0.5, 0.5 )
tooltip_text = "25%"
texture = ExtResource( 3 )

[node name="star2Texture" type="TextureRect" parent="."]
offset_left = 75.0
offset_top = 20.0
offset_right = 175.0
offset_bottom = 120.0
scale = Vector2( 0.5, 0.5 )
tooltip_text = "100%"
texture = ExtResource( 3 )

[node name="star3Texture" type="TextureRect" parent="."]
offset_left = 126.0
offset_top = 45.0
offset_right = 226.0
offset_bottom = 145.0
scale = Vector2( 0.5, 0.5 )
tooltip_text = "75%"
texture = ExtResource( 3 )

[connection signal="gui_input" from="." to="." method="_on_Control_gui_input"]
